--- a/css/style.css
+++ b/css/style.css
@@ -514,6 +514,16 @@ img {
 .footer-icons {
   fill: var(--cloud-cl);
 }
+
+.footer-title-form {
+  margin-bottom: 16px;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: #ffffff;
+}
+
 /* ###########----MODAL-WINDOW----############ */
 
 .modal-window {
