--- a/css/style.css
+++ b/css/style.css
@@ -668,6 +668,25 @@ img {
   margin-bottom: 4px;
 }
 
+.modal-input-icon-section {
+  position: relative;
+}
+
+.modal-input {
+  width: 100%;
+  height: 40px;
+  border: 1px solid rgba(46, 47, 66, 0.4);
+  border-radius: 4px;
+  background-color: transparent;
+  padding-left: 38px;
+  outline: transparent;
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-input:focus {
+  border-color: #4d5ae5;
+}
+
 /*####################--PORTFOLIO--####################### */
 
 .container-portfolio {
