--- a/css/style.css
+++ b/css/style.css
@@ -687,6 +687,18 @@ img {
   border-color: #4d5ae5;
 }
 
+.modal-user-name-icon {
+  position: absolute;
+  left: 16px;
+  top: 50%;
+  transform: translateY(-50%);
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-input:focus .modal-user-name-icon {
+  fill: #4d5ae5;
+}
+
 /*####################--PORTFOLIO--####################### */
 
 .container-portfolio {
