--- a/css/style.css
+++ b/css/style.css
@@ -695,7 +695,7 @@ img {
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.modal-input:focus .modal-user-name-icon {
+.modal-input-icon-section .modal-user-name-icon {
   fill: #4d5ae5;
 }
 
