--- a/css/style.css
+++ b/css/style.css
@@ -695,8 +695,8 @@ img {
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.modal-input-icon-section:focus .modal-user-name-icon {
-  fill: #4d5ae5;
+.modal-input:focus .modal-user-name-icon {
+  fill: var(--accent-cl);
 }
 
 /*####################--PORTFOLIO--####################### */
