--- a/css/style.css
+++ b/css/style.css
@@ -699,6 +699,30 @@ img {
   fill: var(--accent-cl);
 }
 
+.modal-textarea-section {
+  margin-bottom: 16px;
+}
+
+.model-textarea {
+  width: 100%;
+  height: 120px;
+  font-size: 12px;
+  line-height: 1.17;
+  letter-spacing: 0.04em;
+  color: rgba(46, 47, 66, 0.4);
+  border: 1px solid rgba(46, 47, 66, 0.4);
+  border-radius: 4px;
+  background-color: transparent;
+  padding: 8px 16px;
+  outline: transparent;
+  resize: none;
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.model-textarea:focus {
+  border-color: #4d5ae5;
+}
+
 /*####################--PORTFOLIO--####################### */
 
 .container-portfolio {
