--- a/css/style.css
+++ b/css/style.css
@@ -695,7 +695,8 @@ img {
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.modal-input:focus .modal-user-name-icon {
+.modal-user-name-icon:hover,
+focus {
   fill: var(--accent-cl);
 }
 
@@ -721,6 +722,17 @@ img {
 
 .model-textarea:focus {
   border-color: #4d5ae5;
+}
+
+.modal-check-section {
+  margin-bottom: 24px;
+}
+
+.modal-check-label {
+  font-size: 12px;
+  line-height: 1.17;
+  letter-spacing: 0.04em;
+  color: var(--light-slate-cl);
 }
 
 /*####################--PORTFOLIO--####################### */
