--- a/css/style.css
+++ b/css/style.css
@@ -695,9 +695,18 @@ img {
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.modal-user-name-icon:hover,
+/* .modal-user-name-icon:hover,
 focus {
   fill: var(--accent-cl);
+} */
+
+.modal-input:focus + .modal-user-name-icon {
+  fill: var(--accent-cl);
+  position: absolute;
+  left: 16px;
+  top: 50%;
+  transform: translateY(-50%);
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-textarea-section {
