--- a/css/style.css
+++ b/css/style.css
@@ -744,6 +744,20 @@ focus {
   color: var(--light-slate-cl);
 }
 
+.modal-label-span {
+  width: 16px;
+  height: 16px;
+  border: 1px solid rgba(46, 47, 66, 0.4);
+  border-radius: 2px;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  fill: transparent;
+}
+
 /*####################--PORTFOLIO--####################### */
 
 .container-portfolio {
