--- a/css/style.css
+++ b/css/style.css
@@ -764,6 +764,27 @@ focus {
   fill: var(--cloud-cl);
 }
 
+.privacy-link {
+  color: var(--accent-cl);
+}
+
+.modal-button-send {
+  display: block;
+  min-width: 169px;
+  height: 56px;
+  font-family: "Roboto", sans-serif;
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+  color: #ffffff;
+  cursor: pointer;
+  background-color: #4d5ae5;
+  border: none;
+  border-radius: 4px;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
 /*####################--PORTFOLIO--####################### */
 
 .container-portfolio {
