--- a/css/style.css
+++ b/css/style.css
@@ -758,7 +758,7 @@ focus {
   fill: transparent;
 }
 
-.modal-input-check:checked + .check-icon + .modal-label-span {
+.modal-input-check:checked .check-icon + .modal-label-span {
   background-color: var(--ocean-cl);
   border: none;
   fill: var(--cloud-cl);
